# publishers-kafka

./: .pre-commit-config.yaml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/publishers/: kafka_publisher.py
src/nagare/publishers/: kafka_publisher.py
