[metadata]
name = nagare-publishers-kafka
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Kafka publisher
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/publishers-kafka
    Tracker = https://github.com/nagareproject/publishers-kafka/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services-kafka
    nagare-server

[options.entry_points]
nagare.publishers =
    kafka = nagare.publishers.kafka_publisher:Publisher

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
